@@ -5,6 +5,7 @@ Version 2.3
 * Don't write out vis records that occur over a scan change
 * int -> double mjd for gain curve selection
 * Respect DIFX_GROUP_ID and set umask
+* Write sniffer file output
 * Version for NRAO-DiFX 1.1
 
 Version 2.2
